WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118278
[JSC]: Fix maybe-uninitialized gcc 4.8 warning in DFGSpeculativeJIT.cpp
https://bugs.webkit.org/show_bug.cgi?id=118278
Summary
[JSC]: Fix maybe-uninitialized gcc 4.8 warning in DFGSpeculativeJIT.cpp
Sergio Correia (qrwteyrutiyoup)
Reported
2013-07-01 22:00:59 PDT
[JSC]: Fix maybe-uninitialized gcc 4.8 warning in DFGSpeculativeJIT.cpp
Attachments
Patch
(1.46 KB, patch)
2013-07-01 22:03 PDT
,
Sergio Correia (qrwteyrutiyoup)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Correia (qrwteyrutiyoup)
Comment 1
2013-07-01 22:03:28 PDT
Created
attachment 205862
[details]
Patch
Sergio Correia (qrwteyrutiyoup)
Comment 2
2013-07-01 22:03:54 PDT
Warning: /home/sergio/projects/webkitnix/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp: In member function 'void JSC::DFG::SpeculativeJIT::compilePutByValForIntTypedArray(const JSC::TypedArrayDescriptor&, JSC::DFG::GPRReg, JSC::DFG::GPRReg, JSC::DFG::Node*, size_t, JSC::TypedArraySignedness, JSC::TypedArrayRounding)': /home/sergio/projects/webkitnix/Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp:2682:220: error: 'valueGPR' may be used uninitialized in this function [-Werror=maybe-uninitialized]
WebKit Commit Bot
Comment 3
2013-07-01 23:03:54 PDT
Comment on
attachment 205862
[details]
Patch Clearing flags on attachment: 205862 Committed
r152280
: <
http://trac.webkit.org/changeset/152280
>
WebKit Commit Bot
Comment 4
2013-07-01 23:03:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug