[JSC]: Fix maybe-uninitialized gcc 4.8 warning in DFGSpeculativeJIT.cpp https://bugs.webkit.org/show_bug.cgi?id=118278

Patch by Sergio Correia <sergio.correia@openbossa.org> on 2013-07-01
Reviewed by Filip Pizlo.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compilePutByValForIntTypedArray):
Initialize valueGPR with InvalidGPRReg.

Canonical link: https://commits.webkit.org/136303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152280 268f45cc-cd09-0410-ab3c-d52691b4dbfc